# OpenCV_Project

./: CMakeLists.txt  test_crop.cpp
